2002-05-22  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_sh_sh4.cdl: Select variant 7750 by default.

2002-05-08  Jesper Skov  <jskov@redhat.com>

	* src/sh4_scif.c: Register renaming.

	* include/mod_regs_ser.h: Register renaming. SCI registers now
	contain _SCI_, SCIF registers contain _SCIF_. Merge SCIF and IrDA
	definitions (stripping SCIF identifier suffix).

2002-01-17  Jesper Skov  <jskov@redhat.com>

	* include/variant.inc: Include needed ptrs.

2002-01-16  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_sh_sh4.cdl: Added interrupt model header definition.
	Added RTC_PRESCALE option.

2002-01-14  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_sh_sh4.cdl: Added exception model header definitions.

	* include/variant.inc: Fixed assembler warning.

2001-11-07  Jesper Skov  <jskov@redhat.com>

	* src/var_mk_defs.c (main): Fix warning.

2001-10-17  Jesper Skov  <jskov@redhat.com>

	* include/mod_regs_ubc.h (CYGARC_REG_BRCR_ONE_STEP): Added.

2001-09-25  Jesper Skov  <jskov@redhat.com>

	* include/var_intr.h: Default CYGPRI_HAL_INTERRUPT_ACKNOWLEDGE_PLF
	and CYGPRI_HAL_INTERRUPT_CONFIGURE_PLF added.

	* src/var_misc.c: Use those macros.

2001-09-24  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_sh_sh4.cdl: Disable cache on 7750. Doesn't work
	properly.

2001-09-12  Jesper Skov  <jskov@redhat.com>

	* include/var_intr.h (CYGPRI_HAL_INTERRUPT_UPDATE_LEVEL_PLF):
	Provide default version.

2001-08-08  Jesper Skov  <jskov@redhat.com>

	* include/mod_7750.h: Don't use UBC as handling of it is broken.

2001-07-26  Jesper Skov  <jskov@redhat.com>

	* include/var_cache.h: Define flash cache macros that also disable
	instruction cache. Not at all clear to me why it should make a
	difference, but it does.

	* src/var_misc.c (cyg_var_enable_caches): Don't allow caches to be
	enabled when the flash IO driver has been included. This is a
	temporary workaround for an unidentified caching problem.
	(cyg_var_enable_caches): Enabled again.
